# mc_xsens_plugin

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: build.yml
etc/: XsensPlugin.in.yaml
include/mc_xsens_plugin/: XsensBodyConfiguration.h  XsensBodyMappings.h  XsensDataInput.h  XsensDataInputDatastore.h  XsensDataInputLive.h  XsensPluginData.h  XsensSegments.h
src/: XsensDataInputDatastore.cpp  XsensDataInputLive.cpp  XsensPlugin.cpp  XsensPlugin.h  XsensPluginData.cpp  XsensPluginData.h
src/states/: CMakeLists.txt  XsensRetargetting.cpp  XsensRetargetting.h
tests/: main.cpp
tests/etc/: mc_rtc.yaml
